syntax = "proto3";

package user;

message User {
  int32 id = 1;
  string first_name = 2;
  string middle_name = 3;
  string last_name = 4;
}

message CreateUserRequest {
  string first_name = 1;
  string middle_name = 2;
  string last_name = 3;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  User user = 1;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}
